1. Added new scrolldown method 2. Changed names of packages

--- a/spark_reports 17-март-24 09-16-10/SparkReport/Spark.html
+++ b/spark_reports 17-март-24 09-16-10/SparkReport/Spark.html
@@ -334,8 +334,8 @@ eventsCount: 5,
 	at org.testng.Assert.assertEquals(Assert.java:132)
 	at org.testng.Assert.assertEquals(Assert.java:656)
 	at org.testng.Assert.assertEquals(Assert.java:666)
-	at pageObjects.BasePage.assertEqualsByWebElementExpectedText(BasePage.java:182)
-	at pages.ElementsPage.dataListedSuccessFully(ElementsPage.java:62)
+	at Base.BasePage.assertEqualsByWebElementExpectedText(BasePage.java:182)
+	at pageObjects.ElementsPage.dataListedSuccessFully(ElementsPage.java:62)
 	at stepDefinitions.ElementsPageTCs.TextBoxTab.negativeTCs.TextBoxFullFieldFormSteps.user_sees_form_added_below_with_full_name(TextBoxFullFieldFormSteps.java:52)
 	at ✽.User sees form added below with fullName "Johnny Bravo"(classpath:features/ElementsPageFeatures/TextBoxTab.feature:11)
 </textarea>
